kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: contador-de-visitas
  labels:
    name: contador-de-visitas
