kubernetes/deployment-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contador-de-visitas-app
  namespace: contador-de-visitas
spec:
  replicas: 2
  selector:
    matchLabels:
      app: contador-de-visitas-app
  template:
    metadata:
      labels:
        app: contador-de-visitas-app
    spec:
      containers:
      - name: contador-de-visitas-app
        image: fernandostn/contador-de-visitas:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
