kubernetes/deployment-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contador-de-visitas
  namespace: contador-de-visitas
spec:
  selector:
    matchLabels:
      app: contador-de-visitas
  template:
    metadata:
      labels:
        app: contador-de-visitas
    spec:
      containers:
      - name: redis
        image: redislabs/redismod
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 6379
