kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: contador-de-visitas
  namespace: contador-de-visitas
  labels:
    app: contador-de-visitas
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: contador-de-visitas
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  namespace: contador-de-visitas
  labels:
    app: contador-de-visitas
spec:
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: contador-de-visitas
  type: ClusterIP
